Fix segfault when calling super_method on an aliased method without a super method

Fixes [Bug #17780]